# better-reads

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  better-reads.cabal  better-reads.nix  default.nix  hie.yaml  openapi3.nix  schema.graphql  shell.nix  stack.yaml
.github/workflows/: ci.yml  ci.yml.todo
app/: Main.hs
app/cli/: Main.hs
app/web/: Main.hs
config/values/: local.yaml
frontend/: shell.nix
infra/better-reads/: Chart.yaml  values.yaml
infra/better-reads/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
infra/better-reads/templates/tests/: test-connection.yaml
infra/pulumi/aws/: Pulumi.prod.yaml  Pulumi.yaml
pulumi/: Pulumi.yaml
src/: App.hs  AppTypes.hs  Application.hs  BetterReads.hs  Common.hs  Domain.hs  Errors.hs  GraphQLAPI.hs  Service.hs  Static.hs
src/Internal/: Domain.hs  Sanitize.hs
static/: script.js  style.css
test/: DomainSpec.hs  Spec.hs
test/Spec/: Main.hs  ServiceSpec.hs
test/Spec/Internal/: SanitizeSpec.hs
