cabal-version:       3.0
name:                better-reads
version:             0.0.0.0
synopsis:            A toolkit to better handle goodread books
description:
    A toolkit to better handle goodread books.
    See [README.md](https://github.com/albertodvp/better-reads#better-reads) for more details.
homepage:            https://github.com/albertodvp/better-reads
bug-reports:         https://github.com/albertodvp/better-reads/issues
license:             MIT
license-file:        LICENSE
author:              Alberto Fanton
maintainer:          Alberto Fanton <alberto.fanton@protonmail.com>
copyright:           2023 Alberto Fanton
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/albertodvp/better-reads.git

common common-options
  build-depends:       base ^>= 4.15.1.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     BetterReads

executable better-reads
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       better-reads
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite better-reads-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       better-reads
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
